--- a/build.yaml
+++ b/build.yaml
@@ -1,4 +1,4 @@
-# This file generates the GitHub Actions matrix.
+ # This file generates the GitHub Actions matrix.
 # For simple board + shield combinations, add them to the top level board and
 # shield arrays, for more control, add individual board + shield combinations
 # to the `include` property. You can also use the `cmake-args` property to
@@ -71,6 +71,9 @@ include:
    shield: settings_reset
  - board: nice_nano_v2
    shield: settings_reset
+ - board: seeeduino_xiao_ble
+   shield: pueo_dongle
+   cmake-args: -DCONFIG_ZMK_STUDIO=y
  - board: nice_nano_v2
    shield: pueo_left
    snippet: studio-rpc-usb-uart
@@ -78,10 +81,13 @@ include:
  - board: nice_nano_v2
    shield: pueo_right
    snippet: studio-rpc-usb-uart
-   cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+   cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+ - board: seeeduino_xiao_ble
+   shield: swagboard_dongle nice_swagboard nice_epaper
+   cmake-args: -DCONFIG_ZMK_STUDIO=y
  - board: nice_nano_v2
    shield: swagboard_left nice_swagboard nice_epaper
    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
  - board: nice_nano_v2
    shield: swagboard_right nice_swagboard nice_epaper
-   cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+   cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
