--- a/build.yaml
+++ b/build.yaml
@@ -67,9 +67,18 @@
 #   cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 ---
 include:
+ - board: seeeduino_xiao_ble
+   shield: settings_reset
  - board: nice_nano_v2
-   shield: swagboard_left nice_swagboard nice_epaper
-   cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+   shield: settings_reset
+ - board: seeeduino_xiao_ble
+   shield: pueo_dongle
+   cmake-args: -DCONFIG_ZMK_STUDIO=y
  - board: nice_nano_v2
-   shield: swagboard_right nice_swagboard nice_epaper
+   shield: pueo_left
+   snippet: studio-rpc-usb-uart
+   cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+ - board: nice_nano_v2
+   shield: pueo_right
+   snippet: studio-rpc-usb-uart
    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
