--- a/config/twenny.conf
+++ b/config/twenny.conf
@@ -15,3 +15,5 @@ CONFIG_RGBLED_WIDGET_LAYER_7_COLOR=0
 CONFIG_RGBLED_WIDGET_LAYER_8_COLOR=1
 CONFIG_RGBLED_WIDGET_LAYER_9_COLOR=2
 CONFIG_RGBLED_WIDGET_LAYER_10_COLOR=3
+
+CONFIG_ZMK_BLE_PREVENT_SLEEP_WHILE_ACTIVE_CONNECTED=y
