--- a/build.yaml
+++ b/build.yaml
@@ -68,5 +68,10 @@
 ---
 include:
  - board: seeeduino_xiao_ble
-   shield: pueo_dongle
-   cmake-args: -DCONFIG_ZMK_STUDIO=y
+   shield: twenny_left
+   cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+ - board: seeeduino_xiao_ble
+   shield: twenny_right
+   cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+ - board: seeeduino_xiao_ble
+   shield: settings_reset
