--- a/build.yaml
+++ b/build.yaml
@@ -68,10 +68,5 @@
 ---
 include:
  - board: seeeduino_xiao_ble
-   shield: twenny_left
-   cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
- - board: seeeduino_xiao_ble
-   shield: twenny_right
-   cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
- - board: seeeduino_xiao_ble
-   shield: settings_reset
+   shield: pueo_dongle
+   cmake-args: -DCONFIG_ZMK_STUDIO=y
